z-index solved

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -235,11 +235,13 @@ body {
 }
 
 .masthead__image {
- }
+  z-index: 1;
+  position: relative;  }
 
 .masthead__mobile {
   margin-top: 2rem;
-   z-index: 1;
+   z-index: 2;
+   position: absolute;
 }
 
 .masthead__circle {
@@ -249,8 +251,8 @@ body {
     right: -18%;
   border-radius: 100%;
   background: linear-gradient(230.31deg, #047f8b 5.71%, #a3cef5 92.29%);
-  z-index: 0;
-  position: absolute;
+   position: absolute;
+   z-index: 0;
 }
 
 .masthead__comming {
